// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders correctly, timerOn false 1`] = `
<Fragment>
  <Button
    icon="play"
    onClick={[Function]}
  />
</Fragment>
`;

exports[`render renders correctly, timerOn true 1`] = `
<Fragment>
  <Button
    icon="pause"
    onClick={[Function]}
  />
</Fragment>
`;
